# HelloLibsnark

./: CMakeLists.txt  build.sh
depends/: .gitignore
src/: AndGate.cpp  AndGate.tcc  CMakeLists.txt  GraphColoring.tcc  Hello_World.cpp  OrGate.tcc  RangeCheck.tcc  RunAllTests.cpp  TestGraphColoring.cpp  TestOrGate.cpp  TestRangeCheck.cpp  TestThreeColoring.cpp
